--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,16 @@
 $f: 'Ubuntu', sans-serif;
 $t: 'TeX Gyre Adventor';
+/*================ Universal Code ================*/
 body{
     font-family: 'Ubuntu', sans-serif;
 }
+.container{
+    max-width: 1040px;
+}
 
+/*================ Header ================*/
+.logo{
+    display: inline-block;
+    padding-top: 33px;
+    padding-bottom: 20px;
+}
