--- a/css/style.scss
+++ b/css/style.scss
@@ -1,16 +1,67 @@
-$f: 'Ubuntu', sans-serif;
+$f: 'Ubuntu',
+sans-serif;
 $t: 'TeX Gyre Adventor';
 /*================ Universal Code ================*/
-body{
+
+body {
     font-family: 'Ubuntu', sans-serif;
+    color: #000;
 }
-.container{
+
+.container {
     max-width: 1040px;
 }
 
+.relative {
+    position: relative;
+}
+
 /*================ Header ================*/
-.logo{
+
+.logo {
     display: inline-block;
     padding-top: 33px;
     padding-bottom: 20px;
+}
+
+/*================ Banner ================*/
+
+.banner {
+    background: #e2bc3b;
+    .container {
+        min-height: 552px;
+        display: flex;
+        align-items: center;
+    }
+    .heading {
+        h1 {
+            color: #fff;
+            font: 48px/1.25 $t;
+            margin: 0;
+
+        }
+        h2 {
+            font: 700 87px/0.83 $t;
+            color: #0c3a55;
+            margin: 0;
+            text-transform: uppercase;
+            margin-top: 12px;
+            margin-bottom: 44px;
+        }
+        a.button {
+            display: inline-block;
+            font: 30px $f;
+            color: #0c3a55;
+            background: #fff;
+            border-radius: 20px;
+            text-decoration: none;
+            padding: 8px 45px;
+            border: none;
+        }
+    }
+    .women-pic {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
 }
