--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,52 @@
 /*================ Universal Code ================*/
 body {
-  font-family: 'Ubuntu', sans-serif; }
+  font-family: 'Ubuntu', sans-serif;
+  color: #000; }
 
 .container {
   max-width: 1040px; }
+
+.relative {
+  position: relative; }
 
 /*================ Header ================*/
 .logo {
   display: inline-block;
   padding-top: 33px;
   padding-bottom: 20px; }
+
+/*================ Banner ================*/
+.banner {
+  background: #e2bc3b; }
+  .banner .container {
+    min-height: 552px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .banner .heading h1 {
+    color: #fff;
+    font: 48px/1.25 "TeX Gyre Adventor";
+    margin: 0; }
+  .banner .heading h2 {
+    font: 700 87px/0.83 "TeX Gyre Adventor";
+    color: #0c3a55;
+    margin: 0;
+    text-transform: uppercase;
+    margin-top: 12px;
+    margin-bottom: 44px; }
+  .banner .heading a.button {
+    display: inline-block;
+    font: 30px "Ubuntu", sans-serif;
+    color: #0c3a55;
+    background: #fff;
+    border-radius: 20px;
+    text-decoration: none;
+    padding: 8px 45px;
+    border: none; }
+  .banner .women-pic {
+    position: absolute;
+    bottom: 0;
+    right: 0; }
