--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,24 @@
 /*================ Universal Code ================*/
 body {
   font-family: 'Ubuntu', sans-serif;
-  color: #000; }
+  color: #000;
+  font-weight: 300; }
 
 .container {
   max-width: 1040px; }
 
 .relative {
   position: relative; }
+
+.img-responsive {
+  display: initial; }
+
+.head h2 {
+  font-family: "TeX Gyre Adventor";
+  font-size: 47px;
+  margin: 0;
+  color: #102f46;
+  text-align: center; }
 
 /*================ Header ================*/
 .logo {
@@ -59,3 +70,21 @@ body {
   word-break: break-all;
   margin: 0;
   padding: 75px 0; }
+
+/*================ Service ================*/
+.service {
+  padding-bottom: 45px;
+  padding-top: 85px; }
+  .service .head {
+    margin-bottom: 45px; }
+  .service .content {
+    color: #276c6a;
+    min-height: 184px;
+    margin: 45px 0; }
+    .service .content h3 {
+      margin: 0;
+      font-size: 29px;
+      margin: 22px 0 0; }
+    .service .content p {
+      margin: 0;
+      font-size: 20px; }
