--- a/css/style.scss
+++ b/css/style.scss
@@ -95,24 +95,55 @@ body {
 }
 
 /*================ Service ================*/
-.service{
+
+.service {
     padding-bottom: 45px;
     padding-top: 85px;
-    .head{
+    .head {
         margin-bottom: 45px;
     }
-    .content{
+    .content {
         color: #276c6a;
         min-height: 184px;
         margin: 45px 0;
-        h3{
+        h3 {
             margin: 0;
             font-size: 29px;
             margin: 22px 0 0;
         }
-        p{
+        p {
             margin: 0;
             font-size: 20px;
+        }
+    }
+}
+
+/*================ Step-work ================*/
+
+.step-work {
+    padding: 90px 0;
+    .head {
+        color: #000;
+    }
+    .content {
+        margin-top: 50px;
+        .img {
+            height: 104px;
+            position: relative;
+            margin-bottom: 8px;
+            img {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin: 0 auto;
+            }
+        }
+        h3{
+            margin: 0;
+            text-align: center;
+            font-size: 30px;
+            line-height: 1.27;
         }
     }
 }
