--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,15 @@ body {
     color: #276c6a;
     min-height: 184px;
     margin: 45px 0; }
+    .service .content .img {
+      height: 118px;
+      position: relative; }
+      .service .content .img img {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 0 auto; }
     .service .content h3 {
       margin: 0;
       font-size: 29px;
