--- a/css/style.scss
+++ b/css/style.scss
@@ -106,6 +106,17 @@ body {
         color: #276c6a;
         min-height: 184px;
         margin: 45px 0;
+        .img{
+            height: 118px;
+            position: relative;
+            img{
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin: 0 auto;
+            }
+        }
         h3 {
             margin: 0;
             font-size: 29px;
