--- a/css/style.scss
+++ b/css/style.scss
@@ -17,6 +17,10 @@ body {
     position: relative;
 }
 
+.no-padding {
+    padding: 0;
+}
+
 .img-responsive {
     display: initial;
 }
@@ -106,10 +110,10 @@ body {
         color: #276c6a;
         min-height: 184px;
         margin: 45px 0;
-        .img{
+        .img {
             height: 118px;
             position: relative;
-            img{
+            img {
                 position: absolute;
                 bottom: 0;
                 left: 0;
@@ -150,11 +154,64 @@ body {
                 margin: 0 auto;
             }
         }
-        h3{
+        h3 {
             margin: 0;
             text-align: center;
             font-size: 30px;
             line-height: 1.27;
         }
+    }
+}
+
+/*================ Footer ================*/
+
+.main-footer {
+    background: #276b68;
+    font-size: 16px;
+    color: #bfbcbc;
+    padding-top: 45px;
+    .content {
+        min-height: 103px;
+        margin-bottom: 25px;
+    }
+    h4 {
+        font-size: 18px;
+        color: #e2bc3b;
+        margin: 0;
+        margin-bottom: 14px;
+    }
+    .border {
+        display: inline-block;
+        border-bottom: 1px solid #e2bc3b;
+        padding-bottom: 10px;
+    }
+    .social {
+        li {
+            display: inline-block;
+            a {
+                display: block;
+                height: 22px;
+                width: 22px;
+                border-radius: 50%;
+                line-height: 22px;
+                text-align: center;
+                color: #729f9d;
+                background: rgba(51, 51, 51, 0.35);
+                font-size: 13px;
+                margin: 0 2px;
+            }
+        }
+    }
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        a {
+            color: #bfbcbc;
+        }
+    }
+    .copy {
+        text-align: center;
+        padding-bottom: 36px;
     }
 }
