--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body {
     list-style: outside none none;
     margin: 0;
     padding: 0;
+    text-align: right;
 }
 
 .main-menu li {
@@ -81,6 +82,7 @@ body {
     transition: 0.5s all ease;
     opacity: 0;
     visibility: hidden;
+    text-align: left;
 }
 
 .main-menu li:hover ul {
