--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,11 @@ body {
 
 .sgs-responsive-menu .slicknav_menu {
   background: none;
-  padding-top: 30px; }
+  padding-top: 30px;
+  padding-bottom: 30px; }
+
+.slicknav_nav {
+  padding-top: 15px; }
 
 .sgs-responsive-menu .slicknav_nav a {
   color: #0c3a55; }
@@ -190,8 +194,6 @@ body {
 
 .YouTubePopUp-Close {
   z-index: 999;
-  width: 1.76vw;
-  height: 4vh;
   bottom: auto;
   right: -2vw; }
 
