--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -36,8 +36,8 @@
         background-position: 0;
     }
     .video .flex {
-	min-height: 463px;
-}
+        min-height: 463px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -62,6 +62,12 @@
     }
     .logo-wraper {
         position: absolute;
+    }
+    #about-page .service-request p {
+        font-size: 21px;
+    }
+    #about-page .service-request .btn {
+        font-size: 22px;
     }
 }
 
@@ -104,5 +110,11 @@
     }
     .video {
         background-position: center;
+    }
+    #about-page .banner h2 {
+        font-size: 46px;
+    }
+    #about-page .banner-bootom h2 {
+        padding-bottom: 35px;
     }
 }
