--- a/css/style.scss
+++ b/css/style.scss
@@ -425,3 +425,56 @@ body {
         padding-bottom: 36px;
     }
 }
+
+/*================ About Page ================*/
+
+#about-page {
+    .banner {
+        background: #235f5e;
+        .container {
+            min-height: 215px;
+        }
+        h2 {
+            color: #fff;
+            font-family: $t;
+            font-size: 64px;
+            font-weight: 700;
+            line-height: 1.14;
+            text-transform: uppercase;
+            margin: 0;
+        }
+    }
+    .banner-bootom {
+        h2 {
+            word-break: keep-all;
+            padding-bottom: 60px;
+        }
+    }
+    .service {
+        padding-top: 0;
+        .head {
+            margin-bottom: 15px;
+        }
+        .content{
+            margin: 35px 0;
+        }
+    }
+    .service-request{
+        background: #dcaf30;
+        padding-top: 40px;
+        padding-bottom: 30px;
+        margin-bottom: 55px;
+        p{
+            font-size: 29px;
+            line-height: 1.28;
+        }
+        .btn{
+            font-size: 30px;
+            color: #fff;
+            border: 1px solid #fff;
+            border-radius: 0;
+            padding: 6px 37px;
+            margin-top: 8px;
+        }
+    }
+}
