--- a/css/style.scss
+++ b/css/style.scss
@@ -428,7 +428,7 @@ body {
 
 /*================ About Page ================*/
 
-#page {
+.page {
     .banner {
         background: #235f5e;
         .container {
@@ -447,8 +447,11 @@ body {
     .banner-bootom {
         h2 {
             word-break: keep-all;
-            padding-bottom: 60px;
+            padding-bottom: 0;
         }
+    }
+    .head h2{
+        padding-top: 60px;
     }
     .service {
         padding-top: 0;
@@ -478,5 +481,11 @@ body {
         border-radius: 0;
         padding: 6px 37px;
         margin-top: 8px;
+    }
+}
+/*================ Portfolio Page ================*/
+#portfolio-page{
+    .banner .container{
+        background: url(../images/port-bg.png) #235f5e no-repeat right;
     }
 }
