--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -38,6 +38,12 @@
     .video .flex {
         min-height: 463px;
     }
+    .portfolio .content {
+	padding: 15px 15px;
+}
+    .portfolio .title h2 {
+	padding-left: 0;
+}
 }
 
 @media (max-width: 767px) {
@@ -69,6 +75,12 @@
     .page .service-request .btn {
         font-size: 22px;
     }
+    .portfolio .content img {
+	max-width: 300px;
+}
+    .portfolio .title h2 {
+	text-align: center;
+}
 }
 
 @media (max-width:575px) {
@@ -117,4 +129,7 @@
     .page .head h2 {
         padding-top: 35px;
     }
+    #portfolio-page .banner .container {
+	background-image: none;
+}
 }
