--- a/css/style.scss
+++ b/css/style.scss
@@ -489,3 +489,29 @@ body {
         background: url(../images/port-bg.png) #235f5e no-repeat right;
     }
 }
+.portfolio{
+    padding: 75px 0 0 0;
+    .title{
+        h2{
+            margin: 0;
+            padding-left: 10px;
+            margin-bottom: 25px;
+        }
+    }
+    .content-wraper{
+        margin-bottom: 50px;
+    }
+    .content{
+        padding: 15px 25px;
+        img{
+            width: 100%;
+        }
+        .link{
+            font-size: 29px;
+            color: #000;
+            text-decoration: none;
+            display: block;
+            margin-top: 17px;
+        }
+    }
+}
