--- a/css/style.scss
+++ b/css/style.scss
@@ -519,3 +519,33 @@ body {
         }
     }
 }
+/*================ Mail Page ================*/
+#mail-send{
+    #banner-background{
+        background-image: url(../images/video-hand-bg.png);
+    }
+}
+.brouse-service{
+    background: #e2bc3b;
+    padding-top: 40px;
+    margin-bottom: 70px;
+    .content-wraper{
+        margin-bottom: 0;
+    }
+}
+.request-send{
+    padding-bottom: 140px;
+    h2{
+        margin-bottom: 65px;
+    }
+    p{
+        font-size: 29px;
+        line-height: 1.24;
+    }
+    h4{
+        margin: 0;
+        font-size: 19px;
+        font-weight: 700;
+        margin-top: 15px;
+    }
+}
