--- a/css/style.scss
+++ b/css/style.scss
@@ -549,3 +549,122 @@ body {
         margin-top: 15px;
     }
 }
+/*================ Contact Page ================*/
+.text-field {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	width: 100%;
+	font-size: 0;
+	font-family: $t;
+	font-weight: 500;
+	font-size: 1rem;
+	position: relative;
+	letter-spacing: 1px;
+    margin-bottom: 70px;
+}
+.text-field .lines::after, .text-field .lines::before, .text-field::after, .text-field::before {
+	content: " ";
+	display: block;
+	bottom: -3px;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	position: absolute;
+	background: #000;
+	transition: width .45s cubic-bezier(.19,1,.22,1) 0ms,top .35s cubic-bezier(.19,1,.22,1),bottom .35s cubic-bezier(.19,1,.22,1);
+}
+.text-field .lines::before, .text-field::before {
+	bottom: auto;
+	top: -3px;
+}
+.text-field .text-field-placeholder {
+	text-transform: uppercase;
+	top: 13px;
+	position: absolute;
+	left: .9375rem;
+	transition: transform .5s cubic-bezier(.19,1,.22,1) 0ms,color .3s cubic-bezier(.8,0,.2,1) 0ms;
+	-ms-transform-origin: left center;
+	transform-origin: left center;
+	pointer-events: none;
+	font-family: $t;
+	font-weight: 400;
+	font-size: 17px;
+    text-transform: capitalize;
+    color: #000;
+}
+.text-field .lines::after, .text-field .lines::before {
+	width: 0;
+	background: #AC9A53;
+	z-index: 2;
+}
+.text-field .lines::before {
+	transition: width .45s cubic-bezier(.19,1,.22,1) 50ms,top .35s cubic-bezier(.19,1,.22,1),bottom .35s cubic-bezier(.19,1,.22,1);
+}
+.text-field .lines::before, .text-field::before {
+	bottom: auto;
+	top: -3px;
+}
+.text-field .formbg {
+	display: none;
+}
+.text-field.focus .text-field-placeholder {
+	-ms-transform: translateY(-220%) scale(.9);
+	transform: translateY(-220%) scale(.9);
+	color: #000;
+}
+
+.text-field.focus .lines::before, .text-field.focus::before {
+	top: -9px;
+}
+.text-field.focus .lines::after, .text-field.focus .lines::before {
+	width: 100%;
+}
+.text-field.focus .lines::after, .text-field.focus::after {
+	bottom: -9px;
+}
+.contact{
+    padding-top: 100px;
+    padding-bottom: 19px;
+    .input{
+        height: 54px;
+        background: none;
+        border: none;
+        width: 100%;
+        padding-left: .9375rem;
+        outline: none;
+        
+    }
+    .form-left {
+	max-width: 460px;
+}
+    .form-right {
+	max-width: 460px;
+	margin-left: auto;
+}
+    .send{
+        max-width: 303px;
+    }
+}
+.text-field button, .text-field input, .text-field textarea {
+	margin: 0;
+	vertical-align: bottom;
+	width: 100%;
+	border: none;
+	padding: 0 .9375rem;
+	letter-spacing: 1px;
+	font-size: 1.25rem;
+	background: hsla(0,0%,100%,.08);
+}
+.text-field textarea {
+	resize: none;
+	transition: height .5s cubic-bezier(.19,1,.22,1);
+	padding: .9375rem;
+}
+.text-field:not(.focus) textarea {
+	font-size: 0;
+}
+.text-field.focus textarea {
+	height: 150px;
+    background: rgba(0,0,0,.1);
+}
