--- a/css/style.scss
+++ b/css/style.scss
@@ -668,3 +668,29 @@ body {
 	height: 150px;
     background: rgba(0,0,0,.1);
 }
+/*================ Contact Page- Address section ================*/
+.contact-address{
+    padding-bottom: 60px;
+    i{
+        height: 50px;
+        width: 50px;
+        float: left;
+        line-height: 50px;
+        background: #e2bc3b;
+        text-align: center;
+        font-size: 30px;
+        margin-right: 14px;
+    }
+    .text{
+        float: left;
+        width: calc(100% - 64px);
+        span{
+            display: block;
+            font-size: 20px;
+            line-height: 1.25;
+            a{
+                color: #000;
+            }
+        }
+    }
+}
