--- a/css/responsive.css
+++ b/css/responsive.css
@@ -40,7 +40,14 @@
     padding-left: 0; }
 
   .portfolio .content-wraper .row {
-    margin: 0 -15px; } }
+    margin: 0 -15px; }
+
+  .contact-address .text span {
+    display: block;
+    font-size: 15px;
+    line-height: 1.25; }
+    .contact-address .text span br {
+      display: none; } }
 @media (max-width: 767px) {
   .banner .women-pic {
     display: none; }
@@ -77,7 +84,13 @@
     text-align: center; }
 
   #mail-send #banner-background {
-    background-image: none; } }
+    background-image: none; }
+
+  .contact .form-left, .contact .form-right {
+    max-width: 100%; }
+
+  .contact-address .phone {
+    margin-bottom: 15px; } }
 @media (max-width: 575px) {
   .banner .heading h1 {
     font: 34px/1.25 "TeX Gyre Adventor"; }
