--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -47,6 +47,14 @@
     .portfolio .content-wraper .row {
         margin: 0 -15px;
     }
+    .contact-address .text span {
+	display: block;
+	font-size: 15px;
+	line-height: 1.25;
+        br{
+            display: none;
+        }
+}
 }
 
 @media (max-width: 767px) {
@@ -87,6 +95,14 @@
     #mail-send #banner-background {
 	background-image: none;
 }
+    .contact .form-left,.contact .form-right {
+	max-width: 100%;
+}
+    .contact-address{
+        .phone{
+            margin-bottom: 15px;
+        }
+    }
 }
 
 @media (max-width:575px) {
