--- a/css/style.scss
+++ b/css/style.scss
@@ -653,7 +653,7 @@ body {
 	border: none;
 	padding: 0 .9375rem;
 	letter-spacing: 1px;
-	font-size: 1.25rem;
+	font-size: 17px;
 	background: hsla(0,0%,100%,.08);
 }
 .text-field textarea {
@@ -661,9 +661,11 @@ body {
 	transition: height .5s cubic-bezier(.19,1,.22,1);
 	padding: .9375rem;
 }
+/*
 .text-field:not(.focus) textarea {
-	font-size: 0;
+	font-size: 16px;
 }
+*/
 .text-field.focus textarea {
 	height: 150px;
     background: rgba(0,0,0,.1);
