--- a/css/style.css
+++ b/css/style.css
@@ -434,7 +434,10 @@ body {
   letter-spacing: 1px;
   margin-bottom: 70px; }
 
-.text-field .lines::after, .text-field .lines::before, .text-field::after, .text-field::before {
+.text-field .lines::after,
+.text-field .lines::before,
+.text-field::after,
+.text-field::before {
   content: " ";
   display: block;
   bottom: -3px;
@@ -446,7 +449,8 @@ body {
   -webkit-transition: width 0.45s cubic-bezier(0.19, 1, 0.22, 1) 0ms, top 0.35s cubic-bezier(0.19, 1, 0.22, 1), bottom 0.35s cubic-bezier(0.19, 1, 0.22, 1);
   transition: width 0.45s cubic-bezier(0.19, 1, 0.22, 1) 0ms, top 0.35s cubic-bezier(0.19, 1, 0.22, 1), bottom 0.35s cubic-bezier(0.19, 1, 0.22, 1); }
 
-.text-field .lines::before, .text-field::before {
+.text-field .lines::before,
+.text-field::before {
   bottom: auto;
   top: -3px; }
 
@@ -468,7 +472,8 @@ body {
   text-transform: capitalize;
   color: #000; }
 
-.text-field .lines::after, .text-field .lines::before {
+.text-field .lines::after,
+.text-field .lines::before {
   width: 0;
   background: #AC9A53;
   z-index: 2; }
@@ -477,7 +482,8 @@ body {
   -webkit-transition: width 0.45s cubic-bezier(0.19, 1, 0.22, 1) 50ms, top 0.35s cubic-bezier(0.19, 1, 0.22, 1), bottom 0.35s cubic-bezier(0.19, 1, 0.22, 1);
   transition: width 0.45s cubic-bezier(0.19, 1, 0.22, 1) 50ms, top 0.35s cubic-bezier(0.19, 1, 0.22, 1), bottom 0.35s cubic-bezier(0.19, 1, 0.22, 1); }
 
-.text-field .lines::before, .text-field::before {
+.text-field .lines::before,
+.text-field::before {
   bottom: auto;
   top: -3px; }
 
@@ -489,13 +495,16 @@ body {
           transform: translateY(-220%) scale(0.9);
   color: #000; }
 
-.text-field.focus .lines::before, .text-field.focus::before {
+.text-field.focus .lines::before,
+.text-field.focus::before {
   top: -9px; }
 
-.text-field.focus .lines::after, .text-field.focus .lines::before {
+.text-field.focus .lines::after,
+.text-field.focus .lines::before {
   width: 100%; }
 
-.text-field.focus .lines::after, .text-field.focus::after {
+.text-field.focus .lines::after,
+.text-field.focus::after {
   bottom: -9px; }
 
 .contact {
@@ -516,7 +525,9 @@ body {
   .contact .send {
     max-width: 303px; }
 
-.text-field button, .text-field input, .text-field textarea {
+.text-field button,
+.text-field input,
+.text-field textarea {
   margin: 0;
   vertical-align: bottom;
   width: 100%;
@@ -562,3 +573,125 @@ body {
       line-height: 1.25; }
       .contact-address .text span a {
         color: #000; }
+
+/*================ Video Page ================*/
+/*================ Video Page form section ================*/
+.video-type {
+  background: #276b68; }
+  .video-type .head h2 {
+    text-align: left;
+    font-size: 34px;
+    color: #e2bc3b;
+    padding-top: 25px; }
+  .video-type .video-thumbnail {
+    position: relative; }
+    .video-type .video-thumbnail img {
+      width: 100%;
+      opacity: .58; }
+    .video-type .video-thumbnail .play {
+      content: "";
+      background: url(../images/play-2.png) no-repeat;
+      height: 74px;
+      width: 74px;
+      top: 50%;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      margin-top: -37px;
+      z-index: 2;
+      position: absolute;
+      display: block; }
+  .video-type .type-button {
+    background: #e2bc3b;
+    text-align: center;
+    margin-top: 15px; }
+    .video-type .type-button a {
+      padding: 5px 0;
+      color: #fff;
+      font-size: 29px;
+      text-decoration: none;
+      display: block;
+      white-space: nowrap;
+      position: relative; }
+      .video-type .type-button a:before {
+        content: "";
+        position: absolute;
+        height: 100%;
+        width: 40px;
+        top: 0;
+        right: 0;
+        background: #f5f3f1; }
+    .video-type .type-button a.current:after {
+      content: "";
+      position: absolute;
+      height: 16px;
+      width: 16px;
+      background: #276b68;
+      top: 50%;
+      right: 12px;
+      border-radius: 50%;
+      margin-top: -8px; }
+
+.videos-item, .form-padding {
+  padding: 30px 25px; }
+
+.vides-wraper, .form-padding-wraper {
+  margin: 0 -25px; }
+
+.video-form {
+  padding-top: 25px;
+  padding-bottom: 0; }
+  .video-form .textarea, .video-form .send {
+    margin-top: -64px; }
+
+.detailes-video {
+  text-align: center;
+  padding-top: 25px; }
+  .detailes-video h3 {
+    margin: 0;
+    background: #276b68;
+    color: #fff;
+    font-size: 37px;
+    padding: 5px 0; }
+  .detailes-video h4 {
+    color: #276b68;
+    margin: 0;
+    font-size: 28px;
+    padding: 15px 0; }
+  .detailes-video p {
+    background: #e2bc3b;
+    color: #276b68;
+    margin: 0;
+    font-size: 25px;
+    padding: 5px 0; }
+
+.video-select-type {
+  border: none;
+  background: transparent;
+  width: 100%;
+  padding: 5px 35px 5px 5px;
+  font-size: 16px;
+  height: 34px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url(../images/arrow.png) right no-repeat;
+  margin: 10px 0; }
+
+.video-select-type::-ms-expand {
+  display: none; }
+
+@media screen and (min-width: 0\0) {
+  .video-select-type {
+    background: none\9;
+    padding: 5px\9; } }
+.video-form {
+  -webkit-transition: opacity 1s ease-out;
+  transition: opacity 1s ease-out;
+  opacity: 0;
+  height: 0;
+  overflow: hidden; }
+
+.show-form {
+  opacity: 1;
+  height: auto; }
