--- a/css/style.scss
+++ b/css/style.scss
@@ -501,7 +501,7 @@ body {
     }
     .content-wraper {
         margin-bottom: 50px;
-        .row{
+        .row {
             margin: 0 -25px;
         }
     }
@@ -519,161 +519,195 @@ body {
         }
     }
 }
+
 /*================ Mail Page ================*/
-#mail-send{
-    #banner-background{
+
+#mail-send {
+    #banner-background {
         background-image: url(../images/video-hand-bg.png);
     }
 }
-.brouse-service{
+
+.brouse-service {
     background: #e2bc3b;
     padding-top: 40px;
     margin-bottom: 70px;
-    .content-wraper{
+    .content-wraper {
         margin-bottom: 0;
     }
 }
-.request-send{
+
+.request-send {
     padding-bottom: 140px;
-    h2{
+    h2 {
         margin-bottom: 65px;
     }
-    p{
+    p {
         font-size: 29px;
         line-height: 1.24;
     }
-    h4{
+    h4 {
         margin: 0;
         font-size: 19px;
         font-weight: 700;
         margin-top: 15px;
     }
 }
+
 /*================ Contact Page ================*/
+
 .text-field {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-	width: 100%;
-	font-size: 0;
-	font-family: $t;
-	font-weight: 500;
-	font-size: 1rem;
-	position: relative;
-	letter-spacing: 1px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100%;
+    font-size: 0;
+    font-family: $t;
+    font-weight: 500;
+    font-size: 1rem;
+    position: relative;
+    letter-spacing: 1px;
     margin-bottom: 70px;
 }
-.text-field .lines::after, .text-field .lines::before, .text-field::after, .text-field::before {
-	content: " ";
-	display: block;
-	bottom: -3px;
-	left: 0;
-	width: 100%;
-	height: 2px;
-	position: absolute;
-	background: #000;
-	transition: width .45s cubic-bezier(.19,1,.22,1) 0ms,top .35s cubic-bezier(.19,1,.22,1),bottom .35s cubic-bezier(.19,1,.22,1);
+
+.text-field .lines::after,
+.text-field .lines::before,
+.text-field::after,
+.text-field::before {
+    content: " ";
+    display: block;
+    bottom: -3px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    background: #000;
+    transition: width .45s cubic-bezier(.19, 1, .22, 1) 0ms, top .35s cubic-bezier(.19, 1, .22, 1), bottom .35s cubic-bezier(.19, 1, .22, 1);
 }
-.text-field .lines::before, .text-field::before {
-	bottom: auto;
-	top: -3px;
+
+.text-field .lines::before,
+.text-field::before {
+    bottom: auto;
+    top: -3px;
 }
+
 .text-field .text-field-placeholder {
-	text-transform: uppercase;
-	top: 13px;
-	position: absolute;
-	left: .9375rem;
-	transition: transform .5s cubic-bezier(.19,1,.22,1) 0ms,color .3s cubic-bezier(.8,0,.2,1) 0ms;
-	-ms-transform-origin: left center;
-	transform-origin: left center;
-	pointer-events: none;
-	font-family: $t;
-	font-weight: 400;
-	font-size: 17px;
+    text-transform: uppercase;
+    top: 13px;
+    position: absolute;
+    left: .9375rem;
+    transition: transform .5s cubic-bezier(.19, 1, .22, 1) 0ms, color .3s cubic-bezier(.8, 0, .2, 1) 0ms;
+    -ms-transform-origin: left center;
+    transform-origin: left center;
+    pointer-events: none;
+    font-family: $t;
+    font-weight: 400;
+    font-size: 17px;
     text-transform: capitalize;
     color: #000;
 }
-.text-field .lines::after, .text-field .lines::before {
-	width: 0;
-	background: #AC9A53;
-	z-index: 2;
-}
+
+.text-field .lines::after,
 .text-field .lines::before {
-	transition: width .45s cubic-bezier(.19,1,.22,1) 50ms,top .35s cubic-bezier(.19,1,.22,1),bottom .35s cubic-bezier(.19,1,.22,1);
-}
-.text-field .lines::before, .text-field::before {
-	bottom: auto;
-	top: -3px;
-}
-.text-field .formbg {
-	display: none;
-}
-.text-field.focus .text-field-placeholder {
-	-ms-transform: translateY(-220%) scale(.9);
-	transform: translateY(-220%) scale(.9);
-	color: #000;
+    width: 0;
+    background: #AC9A53;
+    z-index: 2;
 }
 
-.text-field.focus .lines::before, .text-field.focus::before {
-	top: -9px;
+.text-field .lines::before {
+    transition: width .45s cubic-bezier(.19, 1, .22, 1) 50ms, top .35s cubic-bezier(.19, 1, .22, 1), bottom .35s cubic-bezier(.19, 1, .22, 1);
 }
-.text-field.focus .lines::after, .text-field.focus .lines::before {
-	width: 100%;
+
+.text-field .lines::before,
+.text-field::before {
+    bottom: auto;
+    top: -3px;
 }
-.text-field.focus .lines::after, .text-field.focus::after {
-	bottom: -9px;
+
+.text-field .formbg {
+    display: none;
 }
-.contact{
+
+.text-field.focus .text-field-placeholder {
+    -ms-transform: translateY(-220%) scale(.9);
+    transform: translateY(-220%) scale(.9);
+    color: #000;
+}
+
+.text-field.focus .lines::before,
+.text-field.focus::before {
+    top: -9px;
+}
+
+.text-field.focus .lines::after,
+.text-field.focus .lines::before {
+    width: 100%;
+}
+
+.text-field.focus .lines::after,
+.text-field.focus::after {
+    bottom: -9px;
+}
+
+.contact {
     padding-top: 100px;
     padding-bottom: 19px;
-    .input{
+    .input {
         height: 54px;
         background: none;
         border: none;
         width: 100%;
         padding-left: .9375rem;
         outline: none;
-        
+
     }
     .form-left {
-	max-width: 460px;
-}
+        max-width: 460px;
+    }
     .form-right {
-	max-width: 460px;
-	margin-left: auto;
-}
-    .send{
+        max-width: 460px;
+        margin-left: auto;
+    }
+    .send {
         max-width: 303px;
     }
 }
-.text-field button, .text-field input, .text-field textarea {
-	margin: 0;
-	vertical-align: bottom;
-	width: 100%;
-	border: none;
-	padding: 0 .9375rem;
-	letter-spacing: 1px;
-	font-size: 17px;
-	background: hsla(0,0%,100%,.08);
-}
+
+.text-field button,
+.text-field input,
 .text-field textarea {
-	resize: none;
-	transition: height .5s cubic-bezier(.19,1,.22,1);
-	padding: .9375rem;
+    margin: 0;
+    vertical-align: bottom;
+    width: 100%;
+    border: none;
+    padding: 0 .9375rem;
+    letter-spacing: 1px;
+    font-size: 17px;
+    background: hsla(0, 0%, 100%, .08);
 }
+
+.text-field textarea {
+    resize: none;
+    transition: height .5s cubic-bezier(.19, 1, .22, 1);
+    padding: .9375rem;
+}
+
 /*
 .text-field:not(.focus) textarea {
 	font-size: 16px;
 }
 */
+
 .text-field.focus textarea {
-	height: 150px;
-    background: rgba(0,0,0,.1);
+    height: 150px;
+    background: rgba(0, 0, 0, .1);
 }
+
 /*================ Contact Page- Address section ================*/
-.contact-address{
+
+.contact-address {
     padding-bottom: 60px;
-    i{
+    i {
         height: 50px;
         width: 50px;
         float: left;
@@ -683,16 +717,170 @@ body {
         font-size: 30px;
         margin-right: 14px;
     }
-    .text{
+    .text {
         float: left;
         width: calc(100% - 64px);
-        span{
+        span {
             display: block;
             font-size: 20px;
             line-height: 1.25;
-            a{
+            a {
                 color: #000;
             }
         }
     }
+}
+
+
+
+
+/*================ Video Page ================*/
+
+/*================ Video Page form section ================*/
+
+.video-type {
+    background: #276b68;
+    .head {
+        h2 {
+            text-align: left;
+            font-size: 34px;
+            color: #e2bc3b;
+            padding-top: 25px;
+        }
+    }
+
+    .video-thumbnail {
+        position: relative;
+        img {
+            width: 100%;
+            opacity: .58;
+        }
+        .play {
+            content: "";
+            background: url(../images/play-2.png) no-repeat;
+            height: 74px;
+            width: 74px;
+            top: 50%;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+            margin-top: -37px;
+            z-index: 2;
+            position: absolute;
+            display: block;
+        }
+    }
+    .type-button {
+        background: #e2bc3b;
+        text-align: center;
+        margin-top: 15px;
+        a {
+            padding: 5px 0;
+            color: #fff;
+            font-size: 29px;
+            text-decoration: none;
+            display: block;
+            white-space: nowrap;
+            position: relative;
+            &:before {
+                content: "";
+                position: absolute;
+                height: 100%;
+                width: 40px;
+                top: 0;
+                right: 0;
+                background: #f5f3f1;
+            }
+
+        }
+        a.current {
+
+            &:after {
+                content: "";
+                position: absolute;
+                height: 16px;
+                width: 16px;
+                background: #276b68;
+                top: 50%;
+                right: 12px;
+                border-radius: 50%;
+                margin-top: -8px;
+            }
+        }
+    }
+}
+
+.videos-item,.form-padding {
+    padding: 30px 25px;
+}
+
+.vides-wraper,.form-padding-wraper {
+    margin: 0 -25px;
+}
+.video-form{
+    padding-top: 25px;
+    padding-bottom: 0;
+    .textarea,.send{
+        margin-top: -64px;
+    }
+}
+.detailes-video{
+    text-align: center;
+    padding-top: 25px;
+    h3{
+        margin: 0;
+        background: #276b68;
+        color: #fff;
+        font-size: 37px;
+        padding: 5px 0;
+    }
+    h4{
+        color: #276b68;
+        margin: 0;
+        font-size: 28px;
+        padding: 15px 0;
+    }
+    p{
+        background: #e2bc3b;
+        color: #276b68;
+        margin: 0;
+        font-size: 25px;
+        padding: 5px 0;
+    }
+}
+.video-select-type {
+    border: none;
+    background: transparent;
+    width: 100%;
+    padding: 5px 35px 5px 5px;
+    font-size: 16px;
+    height: 34px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url(../images/arrow.png) right no-repeat;
+    margin: 10px 0;
+}
+
+
+.video-select-type::-ms-expand {
+    display: none;
+}
+
+
+@media screen and (min-width:0\0) {
+    .video-select-type {
+        background: none\9;
+        padding: 5px\9;
+    }
+}
+.video-form {
+    transition: opacity 1s ease-out;
+    opacity: 0; 
+    height: 0;
+    overflow: hidden;
+}
+.show-form{
+    opacity: 1;
+    height: auto;
 }
