--- a/css/style.css
+++ b/css/style.css
@@ -676,7 +676,8 @@ body {
   -moz-appearance: none;
   appearance: none;
   background: url(../images/arrow.png) right no-repeat;
-  margin: 10px 0; }
+  margin: 10px 0;
+  outline: none; }
 
 .video-select-type::-ms-expand {
   display: none; }
@@ -685,13 +686,3 @@ body {
   .video-select-type {
     background: none\9;
     padding: 5px\9; } }
-.video-form {
-  -webkit-transition: opacity 1s ease-out;
-  transition: opacity 1s ease-out;
-  opacity: 0;
-  height: 0;
-  overflow: hidden; }
-
-.show-form {
-  opacity: 1;
-  height: auto; }
