--- a/css/style.css
+++ b/css/style.css
@@ -689,6 +689,12 @@ body {
   .video-select-type {
     background: none\9;
     padding: 5px\9; } }
+.video-form .submit {
+  color: #e2bc3b;
+  font-size: 30px;
+  padding: 0 80px;
+  border: 1px solid #000; }
+
 .video-reviews {
   background: #fff;
   padding-top: 20px; }
@@ -716,3 +722,10 @@ body {
     padding: 0; }
   .video-banner-text h2 {
     padding-top: 27px; }
+
+.banner h2 span {
+  color: #e2bc3b;
+  font-size: 32px;
+  display: block;
+  line-height: 0;
+  margin-bottom: 6px; }
