--- a/css/style.css
+++ b/css/style.css
@@ -689,11 +689,13 @@ body {
   .video-select-type {
     background: none\9;
     padding: 5px\9; } }
-.video-form .submit {
-  color: #e2bc3b;
-  font-size: 30px;
-  padding: 0 80px;
-  border: 1px solid #000; }
+.video-form {
+  padding-bottom: 50px; }
+  .video-form .submit {
+    color: #e2bc3b;
+    font-size: 30px;
+    padding: 0 80px;
+    border: 1px solid #000; }
 
 .video-reviews {
   background: #fff;
